# multithread-lab

./: .gitignore  CMakeLists.txt  README.md
data/: ForReadFileMethod.txt
include/: tasks.h  thread_manager.h
src/: main.cpp  tasks.cpp  thread_manager.cpp
